@@ -1,3 +1,6 @@
+2008-09-28
+    * drag keyboard: workaround for broken WMs, now this feature is optional   
+
 2008-09-26 0.2.0
     * implemented RFE: #2106023 MIDI thru
 
